--- a/src/main/resources/templates/doctor_waiting_list.html
+++ b/src/main/resources/templates/doctor_waiting_list.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 <div th:fragment="doctorWaitingFragment">
-    <ul>
+    <ul style="padding: 0; margin: 0; list-style: none;">
         <li th:each="patient, iterStat : ${patients}" class="waiting-item">
-            <span th:text="${patient.name}">환자 이름</span>
+            <div class="patient-header">
+                <span th:text="${patient.name}">환자 이름</span>
+            </div>
             <!-- 오직 첫 번째 항목에 대해서만 버튼을 표시 -->
             <button th:if="${iterStat.index == 0 and !patient.called}" class="call-btn" th:attr="data-id=${patient.id}">호출</button>
             <button th:if="${iterStat.index == 0 and patient.called}" class="in-consultation-btn" th:attr="data-id=${patient.id}">진료중</button>
