--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -58,22 +58,17 @@
 <body>
 <h1>Otolaryngology EMR System</h1>
 <div class="login-box">
-    <form th:action="@{/login}" method="post">
-        <input type="text" id="username" name="username" placeholder="Enter your ID" required>
-
-        <input type="password" id="password" name="password" placeholder="Enter your password" required>
-
-        <button type="submit">login</button>
+    <form th:action="@{/register}" method="post">
+        <input type="text" name="username" placeholder="아이디" required/>
+        <input type="password" name="password" placeholder="비밀번호" required/>
+        <select name="role" required>
+            <option value="DOCTOR">의사</option>
+            <option value="NURSE">간호사</option>
+            <option value="PATIENT">환자</option>
+        </select>
+        <input type="number" name="linkedId" placeholder="해당 역할 고유 id" required/>
+        <button type="submit">회원가입</button>
     </form>
-
-    <!-- 에러 메시지 표시 (로그인 실패 시) -->
-    <p th:if="${param.error}" class="error">
-        ID나 비밀번호가 잘못되었습니다.
-    </p>
-    <div style="margin-top:16px;">
-        <span>아직 회원이 아니신가요?</span>
-        <a th:href="@{/register}" class="btn">회원가입</a>
-    </div>
 </div>
 </body>
 </html>
